# elm-format

./: .gitignore  CHANGELOG.md  README.md  Shakefile.hs  elm-format.cabal  stack.yaml
Shakefiles/: Haskell.hs
elm-format-lib/: elm-format-lib.cabal
elm-format-lib/src/: ElmCompilerAdapter.hs
elm-format-lib/src/AST/: MatchReferences.hs  V0_16.hs
elm-format-lib/src/CommandLine/: World.hs
elm-format-lib/src/CommandLine/World/: HttpWrapper.hs  IO.hs
elm-format-lib/src/ElmBuilder/: BackgroundWriter.hs  File.hs  Http.hs  HttpError.hs  Reporting.hs  Stuff.hs
elm-format-lib/src/ElmBuilder/Elm/: Details.hs  Outline.hs
elm-format-lib/src/ElmBuilder/Reporting/: Exit.hs  Task.hs
elm-format-lib/src/ElmBuilder/Reporting/Exit/: Help.hs
elm-format-lib/src/ElmCompiler/: Compile.hs
elm-format-lib/src/ElmCompiler/AST/: Canonical.hs  Optimized.hs  Source.hs
elm-format-lib/src/ElmCompiler/AST/Utils/: Binop.hs  Shader.hs  Type.hs
elm-format-lib/src/ElmCompiler/Canonicalize/: Effects.hs  Environment.hs  Expression.hs  Module.hs  Pattern.hs  Type.hs
elm-format-lib/src/ElmCompiler/Canonicalize/Environment/: Dups.hs  Foreign.hs  Local.hs
elm-format-lib/src/ElmCompiler/Data/: Bag.hs  Index.hs  Name.hs  NonEmptyList.hs  OneOrMore.hs  Utf8.hs
elm-format-lib/src/ElmCompiler/Data/Map/: Utils.hs
elm-format-lib/src/ElmCompiler/Elm/: Constraint.hs  Docs.hs  Float.hs  Interface.hs  Kernel.hs  Licenses.hs  Magnitude.hs  ModuleName.hs  Package.hs  String.hs  Version.hs
elm-format-lib/src/ElmCompiler/Elm/Compiler/: Imports.hs  Type.hs
elm-format-lib/src/ElmCompiler/Elm/Compiler/Type/: Extract.hs
elm-format-lib/src/ElmCompiler/Json/: Decode.hs  Encode.hs  String.hs
elm-format-lib/src/ElmCompiler/Nitpick/: PatternMatches.hs
elm-format-lib/src/ElmCompiler/Optimize/: Case.hs  DecisionTree.hs  Expression.hs  Module.hs  Names.hs  Port.hs
elm-format-lib/src/ElmCompiler/Parse/: Declaration.hs  Expression.hs  Keyword.hs  Module.hs  Number.hs  Pattern.hs  Primitives.hs  Shader.hs  Space.hs  String.hs  Symbol.hs  Type.hs  Variable.hs
elm-format-lib/src/ElmCompiler/Reporting/: Annotation.hs  Doc.hs  Error.hs  Report.hs  Result.hs  Suggest.hs  Warning.hs
elm-format-lib/src/ElmCompiler/Reporting/Error/: Canonicalize.hs  Docs.hs  Import.hs  Json.hs  Main.hs  Pattern.hs  Syntax.hs  Type.hs
elm-format-lib/src/ElmCompiler/Reporting/Render/: Code.hs  Type.hs
elm-format-lib/src/ElmCompiler/Reporting/Render/Type/: Localizer.hs
elm-format-lib/src/ElmCompiler/Type/: Error.hs  Instantiate.hs  Occurs.hs  Solve.hs  Type.hs  Unify.hs  UnionFind.hs
elm-format-lib/src/ElmCompiler/Type/Constrain/: Expression.hs  Module.hs  Pattern.hs
elm-format-lib/src/ElmFormat/: ImportInfo.hs  KnownContents.hs  Upgrade_0_19.hs
elm-format-lib/src/ElmFormat/Render/: Box.hs
elm-format-lib/src/Parse/: Helpers.hs  Module.hs
elm-format-lib/test/: ElmCompilerAdapterTest.hs
elm-format-test-lib/: elm-format-test-lib.cabal
elm-format-test-lib/src/CommandLine/: TestWorld.hs
elm-format-test-lib/src/Data/: FileTree.hs
elm-format-test-lib/test/Data/: FileTreeTest.hs
elm-refactor/: CHANGELOG.md  elm-refactor.cabal
elm-refactor/src/: Main.hs  Prelude.hs
elm-refactor/src/ElmRefactor/: Cli.hs  CliFlags.hs  Messages.hs  Prelude.hs  Version.hs
elm-refactor/test/: Tests.hs  usage.stdout
elm-refactor/test/ElmRefactor/: CliTest.hs
elm-refactor/test/ElmRefactor/Integration/: ApplyImportsTest.hs  NormalizingReferencesTest.hs  SimplifyTest.hs  UpgradeTest.hs
parser/src/AST/: Declaration.hs  Expression.hs  Json.hs  MatchReferences.hs  Module.hs  Pattern.hs  Structure.hs  V0_16.hs  Variable.hs
parser/src/Parse/: Binop.hs  Declaration.hs  Expression.hs  Helpers.hs  Module.hs  Parse.hs  Pattern.hs  Type.hs
parser/src/Reporting/: Error.hs
parser/src/Reporting/Error/: Syntax.hs
src/AST/: Json.hs
src/CommandLine/: Program.hs  ResolveFiles.hs  TransformFiles.hs  World.hs
src/Data/: Coapplicative.hs  Indexed.hs
src/ElmFormat/: Cli.hs  Execute.hs  FileStore.hs  FileWriter.hs  Filesystem.hs  ImportInfo.hs  InfoFormatter.hs  InputConsole.hs  Mapping.hs  Messages.hs  Operation.hs  OutputConsole.hs  Parse.hs  Upgrade_0_19.hs  World.hs
src/ElmFormat/Render/: Box.hs  Text.hs
src/Messages/: Strings.hs  Types.hs
src/Messages/Formatter/: Format.hs  HumanReadable.hs
tests/: Test.hs
tests/AST/: MatchReferencesTest.hs
tests/CommandLine/: TestWorld.hs
tests/ElmFormat/: ImportInfoTest.hs  TestWorld.hs  Upgrade_0_19Test.hs
tests/ElmRefactor/Integration/: NormalizingReferencesTest.hs
tests/Integration/: CliTest.hs
tests/Parse/: ExpressionTest.hs  PatternTest.hs  TestHelpers.hs  TypeTest.hs
tests/Test/: Generators.hs  Property.hs
tests/test-files/elm-refactor/Elm-0.19/: ButtonExample.upgrade_elm  ExposingAll.elm  ExposingAll.output.elm  ExposingAll.upgrade_elm  NormalizeReferences.output.elm  NormalizeReferences.upgrade_elm  UpgradeDefinitionSyntax.output.elm  UpgradeDefinitionSyntax.upgrade_elm
tests/test-files/good/Elm-0.18/AllSyntax/: Expressions.json
