cabal-version: 2.4

Name: elm-format-lib
version: 0.0.0.1

Synopsis:
    Common code used by elm-format and elm-refactor

License: BSD-3-Clause
License-file: ../LICENSE

Author:     Aaron VonderHaar
Maintainer: gruen0aermel@gmail.com
Copyright:  See https://github.com/avh4/elm-format/blob/master/LICENSE

build-type: Simple


library

    ghc-options:
        -O2 -Wall -Wno-name-shadowing

    default-language: Haskell2010

    default-extensions:
        DeriveFunctor
        MultiParamTypeClasses
        LambdaCase
        OverloadedStrings
        ScopedTypeVariables

    hs-source-dirs:
        src
        ../markdown

    exposed-modules:
        CommandLine.InfoFormatter
        CommandLine.Program
        CommandLine.ResolveFiles
        CommandLine.TransformFiles
        CommandLine.World
        ElmFormat.Upgrade_0_19
        -- exposed for tests
        AST.Helpers
        AST.Listing
        AST.MatchReferences
        AST.Module
        AST.Structure
        AST.V0_16
        Box
        Data.Coapplicative
        Data.Either.Extra
        Data.Indexed
        Data.List.Extra
        Data.ReversedList
        Elm.Utils
        ElmFormat.ImportInfo
        ElmFormat.Parse
        ElmFormat.Render.Box
        ElmFormat.Render.ElmStructure
        ElmFormat.Render.Markdown
        ElmFormat.Render.Text
        ElmVersion
        Parse.Expression
        Parse.Helpers
        Parse.IParser
        Parse.Literal
        Parse.Markdown
        Parse.Pattern
        Parse.Type
        Reporting.Annotation
        Reporting.Error.Syntax
        Reporting.Region
        Reporting.Result

    other-modules:
        Cheapskate.Inlines
        Cheapskate.Parse
        Cheapskate.ParserCombinators
        Cheapskate.Types
        Cheapskate.Util
        CommandLine.Filesystem
        Parse.Binop
        Parse.Common
        Parse.Comments
        Parse.Declaration
        Parse.Module
        Parse.Parse
        Parse.State
        Parse.Whitespace

    build-depends:
        ansi-terminal >= 0.8.2 && < 0.9,
        ansi-wl-pprint >= 0.6.8.2 && < 0.7,
        base >= 4.12.0.0 && < 5,
        bimap >= 0.3.3 && < 0.4,
        binary >= 0.8.7.0 && < 0.9,
        bytestring >= 0.10.8.2 && < 0.11,
        containers >= 0.6.0.1 && < 0.7,
        data-fix >= 0.2.0 && < 0.3,
        directory >= 1.3.3.0 && < 2,
        filepath >= 1.4.2.1 && < 2,
        free >= 5.1.1 && < 6,
        indents >= 0.3.3 && < 0.4,
        json >= 0.9.3 && < 0.10,
        mtl >= 2.2.2 && < 3,
        optparse-applicative >= 0.14.3.0 && < 0.15,
        parsec >= 3.1.13.0 && < 4,
        process >= 1.6.5.0 && < 2,
        relude >= 0.4.0 && < 0.5,
        split >= 0.2.3.3 && < 0.3,
        text >= 1.2.3.1 && < 2
