cabal-version: 2.4

Name: elm-format-test-lib
version: 0.0.0.1

Synopsis:
    Test helpers used by elm-format-tests and elm-refactor-tests

License: BSD-3-Clause
License-file: ../LICENSE

Author:     Aaron VonderHaar
Maintainer: gruen0aermel@gmail.com
Copyright:  See https://github.com/avh4/elm-format/blob/master/LICENSE

build-type: Simple


library
    ghc-options:
        -O2 -Wall -Wno-name-shadowing

    default-language: Haskell2010

    default-extensions:
        DeriveFunctor
        LambdaCase
        OverloadedStrings
        ScopedTypeVariables

    hs-source-dirs:
        src

    exposed-modules:
        CommandLine.TestWorld

    build-depends:
        base >= 4.12.0.0 && < 5,
        containers >= 0.6.0.1 && < 0.7,
        mtl >= 2.2.2 && < 3,
        tasty >= 1.2 && < 2,
        tasty-golden >= 2.3.2 && < 3,
        tasty-hunit >= 0.10.0.1 && < 0.11,
        text >= 1.2.3.1 && < 2,
        elm-format-lib
