cabal-version: 2.4

Name: elm-refactor
version: 0.0.0

Synopsis:
    Transforms Elm source code
Description:
    Transforms Elm source code

Homepage:
    https://elm-lang.org

License: BSD-3-Clause
License-file: LICENSE

Author:     Aaron VonderHaar
Maintainer: gruen0aermel@gmail.com
Copyright:  See https://github.com/avh4/elm-format/blob/master/LICENSE

Category: Build Tool

build-type: Simple

Extra-source-files: README.md

source-repository head
    type:     git
    location: git://github.com/avh4/elm-format.git


common common-options
    default-language: Haskell2010
    ghc-options:
        -threaded -O2 -Wall -Wno-name-shadowing
    default-extensions:
        DeriveFunctor
        LambdaCase
        OverloadedStrings
    build-depends:
        ansi-wl-pprint >= 0.6.8.2 && < 0.7,
        base-noprelude >= 4.12.0.0 && < 5,
        free >= 5.1.1 && < 6,
        json >= 0.9.3 && < 0.10,
        optparse-applicative >= 0.14.3.0 && < 0.15,
        relude >= 0.4.0 && < 0.5,
        text >= 1.2.3.1 && < 2,
        elm-format


executable elm-refactor
    import: common-options

    hs-source-dirs: src
    main-is: Main.hs

    other-modules:
        ElmRefactor.Cli
        ElmRefactor.CliFlags
        ElmRefactor.Messages
        ElmRefactor.Version
        Prelude


test-suite elm-refactor-tests
    import: common-options

    type: exitcode-stdio-1.0
    hs-source-dirs: src test
    main-is: Tests.hs

    other-modules:
        ElmRefactor.Integration.NormalizingReferencesTest
        Prelude

    build-depends:
        tasty >= 1.2 && < 2,
        tasty-golden >= 2.3.2 && < 3,
        tasty-hunit >= 0.10.0.1 && < 0.11,
        tasty-quickcheck >= 0.10.1 && < 0.11,
        HUnit >= 1.6.0.0 && < 2,
        QuickCheck >= 2.12.6.1 && < 3,
        quickcheck-io >= 0.2.0 && < 0.3
